gccida/g1/store_field
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_field/src/expr.c:5497:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_field/src/expr.c:5499:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode value_mode, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_field/src/expr.c:5516:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v27; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_field/src/expr.c:5521:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v33; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_field/src/expr.c:5526:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v38; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_field/src/expr.c:5547:46: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( !direct_store[mode] && ( unsigned int)( mode_class_0[mode] - 5) > 1 || ( *( _WORD *)target & 0xFFFD) == 61 ) 
                                             ^~~~~~~~~~~~
                                             mode_class
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_field/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_field/src/expr.c:5566:31: error: use of undeclared identifier 'machine_mode'
temp = convert_modes( mode, ( machine_mode)v16, temp, 1); 
                              ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_field/src/expr.c:5647:18: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v25 = ( _QWORD *)v23[1]; 
                 ^~~~~~
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_field/src/obj/expr.o] Error 1
